# ml-crypto-trading-bot

./: .gitignore  Cargo.toml  LSTM_model_builder.py  README.md  config.example.yaml  config.yaml.example  predict.py  requirements.txt
datasets/: BTC-Daily-Binance.csv  BTC-Hourly.csv
src/: binance_market.rs  binance_strategy.rs  config.rs  dataset.rs  main.rs  market.rs  model.rs  strategy.rs  utils.rs
