[package]
authors = ["Sleeyax <yourd3veloper@gmail.com>"]
name = "ml-crypto-trading-bot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightgbm = {git = "https://github.com/vaaaaanquish/lightgbm-rs.git", tag = "v0.2.4"}
csv = "1.1.6"
itertools = "0.10.5"
serde_json = "1.0.91"
binance = "0.20.2"
config = {version = "0.13.3", features = ["yaml"]}
serde = { version = "1.0.152", features = ["derive"] }

[lib]
name = "common"
path = "src/lib.rs"
